send broadcast from emitter to middleman app

--- a/middleman/src/main/AndroidManifest.xml
+++ b/middleman/src/main/AndroidManifest.xml
@@ -16,6 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name=".MiddleManProdCastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.ibrahim.middleman.ACTION_SEND_USER" />
+            </intent-filter>
+        </receiver>
+
+
     </application>
 
 </manifest>
