--- a/receiver/build.gradle
+++ b/receiver/build.gradle
@@ -1,9 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
-    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -11,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.ibrahim.emitter"
+        applicationId "com.ibrahim.receiver"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -45,27 +42,4 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation project(path: ':engine')
-
-    //retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.google.code.gson:gson:2.8.6"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-
-    // OkHttp, Retrofit
-    api 'com.squareup.okhttp3:okhttp:3.14.7'
-    api 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-
-
-    //RX
-    api 'io.reactivex.rxjava2:rxjava:2.2.2'
-    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    api 'io.reactivex.rxjava2:rxkotlin:2.2.0'
-
-    //dagger hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 }
