--- a/emitter/src/main/AndroidManifest.xml
+++ b/emitter/src/main/AndroidManifest.xml
@@ -12,13 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Emitter">
-        <activity android:name=".users.MainActivity">
+        <activity android:name=".users.UsersListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name=".EmitterProdCastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.ibrahim.emitter.ACTION_SEND_USER_RESPONSE" />
+            </intent-filter>
+        </receiver>
+
+
     </application>
+
 
 </manifest>
