--- a/engine/build.gradle
+++ b/engine/build.gradle
@@ -46,10 +46,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.google.code.gson:gson:2.8.6"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    api "com.squareup.retrofit2:retrofit:$retrofit_version"
+    api "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    api "com.google.code.gson:gson:2.8.6"
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     // OkHttp, Retrofit
     api 'com.squareup.okhttp3:okhttp:3.14.7'
@@ -60,6 +60,11 @@ dependencies {
     api 'io.reactivex.rxjava2:rxjava:2.2.2'
     api 'io.reactivex.rxjava2:rxandroid:2.1.0'
     api 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+
+    //room sqlite
+    api 'androidx.room:room-rxjava2:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.5'
+    api 'androidx.room:room-runtime:2.2.5'
 
     //dagger hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
