--- a/receiver/build.gradle
+++ b/receiver/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
+
 }
 
 android {
@@ -44,5 +47,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation project(path: ':engine')
+
+    //dagger hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
 }
