--- a/receiver/src/main/AndroidManifest.xml
+++ b/receiver/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.YelloTask">
+        <activity android:name=".users.UsersListActivity" />
         <activity android:name=".ReceiverMainActivity"
             android:launchMode="singleTask">
             <intent-filter>
