navigate back to emitter on user action

--- a/emitter/src/main/AndroidManifest.xml
+++ b/emitter/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Emitter">
-        <activity android:name=".users.UsersListActivity">
+        <activity android:name=".users.UsersListActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
